Changing links to css files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>🌸Tuyen's Personal Site🌸 </title>
-    <link rel="stylesheet" href="../css/css/styles.css">
-    <link rel="stylesheet" media="screen and (max-width:800px)" href="../css/css/table.css">
-    <link rel="stylesheet" media="screen and (max-width:530px" href="../css/css/phone.css">
+    <link rel="stylesheet" href="css/css/styles.css">
+    <link rel="stylesheet" media="screen and (max-width:800px)" href="css/css/table.css">
+    <link rel="stylesheet" media="screen and (max-width:530px" href="css/css/phone.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 
 </head>
@@ -18,7 +18,7 @@
             <li> <a href="#about"> About Me</a></li>
             <li> <a href="#project"> Project</a></li>
             <li> <a href="#contact"> Contact</a></li>
-            <li> <a href="../imgs/resume.pdf" target="_blank"> Resume</a></li>
+            <li> <a href="imgs/resume.pdf" target="_blank"> Resume</a></li>
         </ul>
 
     </nav>
@@ -34,7 +34,7 @@
 
         <div id="pic">
 
-            <img src="../imgs/me.png" alt="">
+            <img src="imgs/me.png" alt="">
             <div id="intro">
                 <h2 class="h2">Tuyen Vo</h2>
                 <p class="h2-prara">I am a computer science student at Stony Brook University, my favorite flower is
