--- a/index.html
+++ b/index.html
@@ -56,20 +56,25 @@
         <div class="row">
             <div class="box">
                 <h1 class="heading">College Management System</h1>
-                <p class = "p"> 
-                    A desktop app built using Java and JavaFX that manages courses, students, textbooks, and faculty. This was a final project for one my of CSE courses at Suffolk County Community College.
+                <p class="p">
+                    A desktop app built using Java and JavaFX that manages courses, students, textbooks, and faculty.
+                    This was a final
+                    project for one my of CSE courses at Suffolk County Community College.
+
                 </p>
             </div>
             <div class="box">
                 <h1 class="heading">Hiking Project</h1>
-                <p class = "p">
-                    A desktop app built using Java and JavaFX that records trails you have went on and stores pictures for those trails.
+                <p class="p">
+                    A desktop app built using Java and JavaFX that records trails you have went on and stores pictures
+                    for those trails.
                 </p>
             </div>
             <div class="box">
                 <h1 class="heading">Text Editor</h1>
-                <p class = "p">
-                    A desktop app built using Java and JavaFX that allows you to edit text files and computes the number of words, sentences, and flesch score.
+                <p class="p">
+                    A desktop app built using Java and JavaFX that allows you to edit text files and computes the number
+                    of words, sentences, and flesch score.
                 </p>
             </div>
         </div>
@@ -82,16 +87,16 @@
             <h1 class="heading">CONTACT</h1>
             <div class='footer'>
                 <a href="https://github.com/VoTTuyen" target="_blank"> <i class="fab fa-github"
-                        style='font-size:60px'></i></a>
+                        style='font-size:65px'></i></a>
                 <a href="https://www.linkedin.com/in/deborah-tuyen-vo-3b8351217/" target="_blank"> <i
-                        class="fab fa-linkedin" style='font-size:60px'></i></a>
+                        class="fab fa-linkedin" style='font-size:65px' >  </i></a>
                 <a href="mailto: thituyen1996@gmail.com" target="_blank"> <i class=" fa fa-envelope"
-                        style='font-size:60px'></i></a>
+                        style='font-size:65px'></i></a>
 
 
         </id>
         <br>
-            <p style="color: white;">Website developed by Tuyen Vo</p>
+        <p style="color: white;">Website developed by Tuyen Vo</p>
 
     </section>
 </body>
