--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="home">
         <div class="main">
-            <h1 class="heading1"> Hi! I'm Tuyen Vo. <br></h1>
+            <h1 class="heading1"> Hi! I'm Tuyen Vo<br></h1>
         </div>
     </section>
 
