--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="imgs/me.png" alt="">
             <div id="intro">
                 <h2 class="h2">Tuyen Vo</h2>
-                <p class="h2-prara">I am a computer science student at Stony Brook University, my favorite flower is
+                <p class="h2-prara">I am a computer science student at Stony Brook University. My favorite flower is
                     Cherry Blossom🌸. I love
                     to <a class="h2-link" href="https://vietnam.travel/things-to-do/21-must-try-vietnamese-dishes"
                         target="_blank">tasting new food 🍲</a>
